--- a/configs/shredos_defconfig
+++ b/configs/shredos_defconfig
@@ -39,7 +39,7 @@ BR2_PACKAGE_DOSFSTOOLS_FSCK_FAT=y
 BR2_PACKAGE_DOSFSTOOLS_MKFS_FAT=y
 BR2_PACKAGE_E2FSPROGS=y
 BR2_PACKAGE_EXFATPROGS=y
-BR2_PACKAGE_DIRECTFB=y
+# BR2_PACKAGE_DIRECTFB=y
 BR2_PACKAGE_DIRECTFB_ATI128=y
 BR2_PACKAGE_DIRECTFB_MATROX=y
 BR2_PACKAGE_DIRECTFB_I830=y
@@ -74,7 +74,7 @@ BR2_PACKAGE_LZ4=y
 BR2_PACKAGE_LIBGCRYPT=y
 BR2_PACKAGE_TPM2_TSS=y
 BR2_PACKAGE_LIBJPEG=y
-BR2_PACKAGE_LIBHID=y
+# BR2_PACKAGE_LIBHID=y
 BR2_PACKAGE_JSON_GLIB=y
 BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_LIBUPNP=y
