--- a/package/Config.in
+++ b/package/Config.in
@@ -2272,6 +2272,7 @@ endif
 	source "package/musl-compat-headers/Config.in"
 	source "package/musl-fts/Config.in"
 	source "package/neon-2-sse/Config.in"
+	source "package/nwipe/Config.in"
 	source "package/openblas/Config.in"
 	source "package/orc/Config.in"
 	source "package/p11-kit/Config.in"
